[gd_scene load_steps=14 format=3 uid="uid://c5to05xceytjk"]

[ext_resource type="Texture2D" uid="uid://deqpjja6gbtfe" path="res://sprites/weapons/magic_weapons/old_goblins_magic_wand.png" id="1"]
[ext_resource type="Texture2D" uid="uid://da0ya1wdnxj7x" path="res://sprites/ui/weapon_card/weapon_temporary_card.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dj6oh3jrbiaa" path="res://sprites/ui/module_options_menu_buttons/drop_default.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dtjrl4fpmdnbw" path="res://sprites/ui/module_options_menu_buttons/equip_hover.png" id="4"]
[ext_resource type="Texture2D" uid="uid://cna0j4fimnqew" path="res://sprites/ui/module_options_menu_buttons/equip_default.png" id="5"]
[ext_resource type="FontFile" uid="uid://bkm60lts17rje" path="res://fonts/000webfont1.ttf" id="6"]
[ext_resource type="Texture2D" uid="uid://vvvtiu5yp1gr" path="res://sprites/ui/module_options_menu_buttons/equip_pressed.png" id="7"]
[ext_resource type="Texture2D" uid="uid://badw3ebeicdkx" path="res://sprites/ui/module_options_menu_buttons/drop_hover.png" id="8"]
[ext_resource type="Texture2D" uid="uid://d3gm265rry5kk" path="res://sprites/ui/module_options_menu_buttons/info_default.png" id="9"]
[ext_resource type="Texture2D" uid="uid://y0reglt80236" path="res://sprites/ui/module_options_menu_buttons/info_pressed.png" id="10"]
[ext_resource type="Texture2D" uid="uid://dx0bnywr5smfk" path="res://sprites/ui/module_options_menu_buttons/info_hover.png" id="11"]
[ext_resource type="Texture2D" uid="uid://cm3kfcfm3j8el" path="res://sprites/ui/module_options_menu_buttons/drop_pressed.png" id="12"]
[ext_resource type="Script" path="res://scripts/ui/weapon_card.gd" id="13"]

[node name="weapon_slot" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -25.0
offset_top = -33.0
offset_right = 26.0
offset_bottom = 33.0
pivot_offset = Vector2(25.5, 33)
script = ExtResource("13")

[node name="main_button" type="TextureButton" parent="."]
layout_mode = 0
anchor_left = 0.51
anchor_top = 0.5
anchor_right = 0.51
anchor_bottom = 0.5
offset_left = -1.01
offset_right = 42.99
offset_bottom = 57.0
button_mask = 2
texture_normal = ExtResource("2")

[node name="weapon_texture" type="TextureRect" parent="main_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -25.5
offset_right = 11.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1")
stretch_mode = 4

[node name="options_with_weapon" type="Control" parent="."]
visible = false
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 5.5
offset_top = 9.0
offset_right = 34.5
offset_bottom = 42.0

[node name="equip_button" type="TextureButton" parent="options_with_weapon"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 27.0
offset_bottom = 11.0
texture_normal = ExtResource("5")
texture_pressed = ExtResource("7")
texture_hover = ExtResource("4")

[node name="new_label" type="Label" parent="options_with_weapon/equip_button"]
layout_mode = 0
offset_left = 4.28574
offset_top = 1.07143
offset_right = 199.286
offset_bottom = 86.3609
scale = Vector2(0.1, 0.1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 101
text = "equip"

[node name="info_button" type="TextureButton" parent="options_with_weapon"]
layout_mode = 0
offset_top = 10.0
offset_right = 28.0
offset_bottom = 20.0
texture_normal = ExtResource("9")
texture_pressed = ExtResource("10")
texture_hover = ExtResource("11")

[node name="new_label" type="Label" parent="options_with_weapon/info_button"]
layout_mode = 0
offset_left = 7.5
offset_top = -3.05176e-05
offset_right = 202.5
offset_bottom = 85.2895
scale = Vector2(0.1, 0.1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 101
text = "info"

[node name="drop_button" type="TextureButton" parent="options_with_weapon"]
layout_mode = 0
offset_top = 20.0
offset_right = 28.0
offset_bottom = 30.0
texture_normal = ExtResource("3")
texture_pressed = ExtResource("12")
texture_hover = ExtResource("8")

[node name="new_label" type="Label" parent="options_with_weapon/drop_button"]
layout_mode = 0
offset_left = 6.42856
offset_top = -1.78571
offset_right = 201.429
offset_bottom = 83.5038
scale = Vector2(0.1, 0.1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 101
text = "drop"

[connection signal="pressed" from="main_button" to="." method="_on_mainbutton_pressed"]
[connection signal="pressed" from="options_with_weapon/equip_button" to="." method="_on_equip_button_pressed"]
[connection signal="pressed" from="options_with_weapon/drop_button" to="." method="_on_drop_button_pressed"]
